fix: update spacing between elements

--- a/assets/src/css/frontend/_components.donor.scss
+++ b/assets/src/css/frontend/_components.donor.scss
@@ -58,6 +58,7 @@ $donor-space-triple: $donor-space * 3;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 10px;
 
     &__image {
         display: flex;
@@ -97,6 +98,8 @@ $donor-space-triple: $donor-space * 3;
         font-size: 1.5rem;
         font-weight: 600;
         text-align: center;
+
+
     }
 }
 
@@ -110,7 +113,7 @@ $donor-space-triple: $donor-space * 3;
     font-weight: 400;
     letter-spacing: 0;
     text-align: left;
-    margin: 10px 0;
+    margin: 5px 0;
 
     p {
         width: 100%;
